--- a/app/views/app.scala.html
+++ b/app/views/app.scala.html
@@ -1,19 +1,56 @@
 @(title: String)
-
-<!DOCTYPE HTML>
-<html manifest="" lang="en-US">
+<!DOCTYPE html>
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>@title</title>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("app.css")"></link>
-    <!-- The line below must be kept intact for Sencha Command to build your application -->
-    <script src="@routes.Assets.at("touch/microloader/development.js")" type="text/javascript"></script>
+<meta charset="utf-8">
+<title>Social BookShelf</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="@routes.Assets.at("stylesheets/base.css")" rel="stylesheet">
+<link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet">
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+      <script src="@routes.Assets.at("javascripts/lib/html5shiv.js")"></script>
+<![endif]-->
+
+<!-- Fav and touch icons -->
+<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.png")">
 </head>
+
 <body>
-    <div id="appLoadingIndicator">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+
+	<div class="container-narrow">
+
+		<div class="masthead">
+			<ul class="nav nav-pills pull-right">
+				<li class="active"><a href="#">Top</a></li>
+				<li><a href="#">本棚をつくる</a></li>
+				<form class="navbar-search pull-right">
+					<input type="search" class="search-query" placeholder="本のタイトルを検索する">
+				</form>
+			</ul>
+			<h3 class="muted">Social BookShelf</h3>
+		</div>
+
+		<hr>
+
+		<div class="jumbotron">
+			<h1>本棚を持ちあるく。</h1>
+			<p class="lead">オフィスで、仲間内で。本の貸し借りを管理するアプリです。<br />あなたの欲しい本は、誰かがすでに持っているかも。</p>
+			<a class="btn btn-large btn-success" href="#">本棚をつくる</a>
+		</div>
+
+		<hr>
+
+		<div class="row-fluid bookshelfInfos">
+            <h2>最近更新された本棚</h2>
+			<div class="bookshelfInfo">
+				<h4 class="name"></h4>
+				<p class="description"></p>
+				<p class="update_date"></p>
+			</div>
+		</div>
+	</div>
+	<!-- /container -->
+	<script data-main="@routes.Assets.at("javascripts/main")" src="@routes.Assets.at("javascripts/lib/require.js")"></script>
 </body>
 </html>
