トップページのレイアウト微調整

--- a/app/views/app.scala.html
+++ b/app/views/app.scala.html
@@ -34,7 +34,7 @@
 		<hr>
 
 		<div class="jumbotron">
-			<h1>本棚を持ちあるく。</h1>
+			<h1>本棚をシェアしよう。</h1>
 			<p class="lead">オフィスで、仲間内で。本の貸し借りを管理するアプリです。<br />あなたの欲しい本は、誰かがすでに持っているかも。</p>
 			<a class="btn btn-large btn-success" href="#">本棚をつくる</a>
 		</div>
