jQueryの代わりにZepto.jsを使用するようにしました
fixed #24

--- a/app/views/app.scala.html
+++ b/app/views/app.scala.html
@@ -51,6 +51,6 @@
 		</div>
 	</div>
 	<!-- /container -->
-	<script data-main="@routes.Assets.at("javascripts/main")" src="@routes.Assets.at("javascripts/lib/require.js")"></script>
+	<script data-main="@routes.Assets.at("javascripts/top")" src="@routes.Assets.at("javascripts/lib/require.js")"></script>
 </body>
 </html>
