--- a/app/views/app.scala.html
+++ b/app/views/app.scala.html
@@ -6,7 +6,7 @@
     <title>Social BookShelf</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="@routes.Assets.at("stylesheets/base.css")" rel="stylesheet">
-    <link href="@routes.Assets.at("stylesheets/main.css")" rel="stylesheet">
+    <link href="@routes.Assets.at("stylesheets/top.css")" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="@routes.Assets.at("javascripts/lib/html5shiv.js")"></script>
@@ -22,13 +22,24 @@
 
     <div class="masthead">
         <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="#">Top</a></li>
-            <li><a href="#">本棚をつくる</a></li>
+<!--            <li class="active"><a href="#">Top</a></li>-->
+            <div id="signinArea" class="pull-right">
+              <span
+                class="g-signin"
+                data-callback="signinCallback"
+                data-clientid="881447546058.apps.googleusercontent.com"
+                data-cookiepolicy="single_host_origin"
+                data-requestvisibleactions="http://schemas.google.com/AddActivity"
+                data-scope="https://www.googleapis.com/auth/plus.login"
+                data-height="short"
+                data-theme="dark">
+              </span>
+            </div>
             <form class="navbar-search pull-right">
                 <input type="search" class="search-query" placeholder="本のタイトルを検索する">
             </form>
         </ul>
-        <h3 class="muted">Social BookShelf</h3>
+        <h3 class="muted"><a href="/">Social BookShelf</a></h3>
     </div>
 
     <hr>
@@ -88,5 +99,35 @@
 </div>
 <!-- /container -->
 <script data-main="@routes.Assets.at("javascripts/top")" src="@routes.Assets.at("javascripts/lib/require.js")"></script>
+<script type="text/javascript" >
+window.___gcfg = {
+    lang: 'ja',
+    parsetags: 'onload'
+};
+(function () {
+    var po = document.createElement('script');
+    po.type = 'text/javascript';
+    po.async = true;
+    po.src = 'https://apis.google.com/js/client:plusone.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(po, s);
+})();
+function signinCallback(authResult) {
+    if (authResult['access_token']) {
+        $.ajax({
+            type: 'POST',
+            url: '/connect',
+            contentType: "application/json",
+            data: JSON.stringify(authResult),
+            success: function (response) {
+                console.log(response);
+                var loginUserInfo = response.result[0];
+                $('#___signin_0').hide();
+                $('#signinArea').append('<img src="' + loginUserInfo.googlePublicProfilePhotoUrl + '"><span>' + loginUserInfo.googleDisplayName + '</span>');
+            }
+        });
+    }
+}
+</script>
 </body>
 </html>
