--- a/app/views/app.scala.html
+++ b/app/views/app.scala.html
@@ -1,104 +1,62 @@
-@(title: String)
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="utf-8">
-    <title>Social BookShelf</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="@routes.Assets.at("stylesheets/base.css")" rel="stylesheet">
-    <link href="@routes.Assets.at("stylesheets/top.css")" rel="stylesheet">
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="@routes.Assets.at("javascripts/lib/html5shiv.js")"></script>
-    <![endif]-->
+@styles = {
+  <link href="@routes.Assets.at("stylesheets/top.css")" rel="stylesheet">
+}
 
-    <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.png")">
-</head>
+@script = {
+  <script src="@routes.Assets.at("javascripts/top.js")"></script>
+}
 
-<body>
+@layout("Social BookShelf")(styles)(script) {
+<div class="jumbotron">
+    <h1>本棚をシェアしよう。</h1>
 
-<div class="container-narrow">
+    <p class="lead">オフィスで、仲間内で。本の貸し借りを管理するアプリです。<br/>あなたの欲しい本は、誰かがすでに持っているかも。</p>
+    <a class="btn btn-large btn-success" href="#">本棚をつくる</a>
+</div>
 
-    <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-<!--            <li class="active"><a href="#">Top</a></li>-->
-            <div id="signinArea" class="pull-right">
-              <span
-                class="g-signin"
-                data-callback="signinCallback"
-                data-clientid="881447546058.apps.googleusercontent.com"
-                data-cookiepolicy="single_host_origin"
-                data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                data-scope="https://www.googleapis.com/auth/plus.login"
-                data-height="short"
-                data-theme="dark">
-              </span>
-                <button class="btn btn-small disabled" id="dissconectButton" type="button">log out</button>
-            </div>
-            <form class="navbar-search pull-right">
-                <input type="search" class="search-query" placeholder="本のタイトルを検索する">
-            </form>
-        </ul>
-        <h3 class="muted"><a href="/">Social BookShelf</a></h3>
-    </div>
+<hr>
 
-    <hr>
-
-    <div class="jumbotron">
-        <h1>本棚をシェアしよう。</h1>
-
-        <p class="lead">オフィスで、仲間内で。本の貸し借りを管理するアプリです。<br/>あなたの欲しい本は、誰かがすでに持っているかも。</p>
-        <a class="btn btn-large btn-success" href="#">本棚をつくる</a>
-    </div>
-
-    <hr>
-
-    <div class="row-fluid bookshelfInfos">
-        <div class="span6">
-            <h2>最近レンタルされた本</h2>
-            <div class="rentalInfo">
-                <img src="@routes.Assets.at("images/51f46ZHorvL._SS500_.jpg")" width="200" />
-                <h4 class="book_title"><a href="#">JavaScript 第6版</a></h4>
-                <p class="rental_user">レンタルしたユーザ名</p>
-                <p class="update_date">2013/03/09 15:35</p>
-            </div>
-            <div class="rentalInfo">
-                <img src="@routes.Assets.at("images/517mEqwfBqL._SL500_AA300_.jpg")" width="200" />
-                <h4 class="book_title"><a href="#">JavaScript徹底攻略 (WEB+DB PRESS plus)</a></h4>
-                <p class="rental_user">レンタルしたユーザ名</p>
-                <p class="update_date">2013/03/09 10:34</p>
-            </div>
-            <div class="rentalInfo">
-                <img src="@routes.Assets.at("images/51rN-3XIrhL._SL500_AA300_.jpg")" width="200" />
-                <h4 class="book_title"><a href="#">入門 モダンJavaScript</a></h4>
-                <p class="rental_user">レンタルしたユーザ名</p>
-                <p class="update_date">2013/03/09 10:34</p>
-            </div>
-            <div class="rentalInfo">
-                <img src="@routes.Assets.at("images/51LVe-ASVdL._SL500_AA300_.jpg")" width="200" />
-                <h4 class="book_title"><a href="#">メンテナブルJavaScript ―読みやすく保守しやすいJavaScriptコードのための作法</a></h4>
-                <p class="rental_user">レンタルしたユーザ名</p>
-                <p class="update_date">2013/03/09 10:34</p>
-            </div>
-            <div class="rentalInfo">
-                <img src="@routes.Assets.at("images/51DE1p8lBL._SL500_AA300_.jpg")" width="200" />
-                <h4 class="book_title"><a href="#">Effective JavaScript JavaScriptを使うときに知っておきたい68の冴えたやり方</a></h4>
-                <p class="rental_user">レンタルしたユーザ名</p>
-                <p class="update_date">2013/03/09 10:34</p>
-            </div>
+<div class="row-fluid bookshelfInfos">
+    <div class="span6">
+        <h2>最近レンタルされた本</h2>
+        <div class="rentalInfo">
+            <img src="@routes.Assets.at("images/51f46ZHorvL._SS500_.jpg")" width="200" />
+            <h4 class="book_title"><a href="#">JavaScript 第6版</a></h4>
+            <p class="rental_user">レンタルしたユーザ名</p>
+            <p class="update_date">2013/03/09 15:35</p>
         </div>
-        <div class="span6">
-            <h2>最近更新された本棚</h2>
-            <div class="bookshelfInfo">
-                <h4 class="name"></h4>
-                <p class="description"></p>
-                <p class="update_date"></p>
-            </div>
+        <div class="rentalInfo">
+            <img src="@routes.Assets.at("images/517mEqwfBqL._SL500_AA300_.jpg")" width="200" />
+            <h4 class="book_title"><a href="#">JavaScript徹底攻略 (WEB+DB PRESS plus)</a></h4>
+            <p class="rental_user">レンタルしたユーザ名</p>
+            <p class="update_date">2013/03/09 10:34</p>
+        </div>
+        <div class="rentalInfo">
+            <img src="@routes.Assets.at("images/51rN-3XIrhL._SL500_AA300_.jpg")" width="200" />
+            <h4 class="book_title"><a href="#">入門 モダンJavaScript</a></h4>
+            <p class="rental_user">レンタルしたユーザ名</p>
+            <p class="update_date">2013/03/09 10:34</p>
+        </div>
+        <div class="rentalInfo">
+            <img src="@routes.Assets.at("images/51LVe-ASVdL._SL500_AA300_.jpg")" width="200" />
+            <h4 class="book_title"><a href="#">メンテナブルJavaScript ―読みやすく保守しやすいJavaScriptコードのための作法</a></h4>
+            <p class="rental_user">レンタルしたユーザ名</p>
+            <p class="update_date">2013/03/09 10:34</p>
+        </div>
+        <div class="rentalInfo">
+            <img src="@routes.Assets.at("images/51DE1p8lBL._SL500_AA300_.jpg")" width="200" />
+            <h4 class="book_title"><a href="#">Effective JavaScript JavaScriptを使うときに知っておきたい68の冴えたやり方</a></h4>
+            <p class="rental_user">レンタルしたユーザ名</p>
+            <p class="update_date">2013/03/09 10:34</p>
+        </div>
+    </div>
+    <div class="span6">
+        <h2>最近更新された本棚</h2>
+        <div class="bookshelfInfo">
+            <h4 class="name"></h4>
+            <p class="description"></p>
+            <p class="update_date"></p>
         </div>
     </div>
 </div>
-<!-- /container -->
-<script data-main="@routes.Assets.at("javascripts/top")" src="@routes.Assets.at("javascripts/lib/require.js")"></script>
-</body>
-</html>
+}
