本棚の新規登録画面を作成しました closed #22

--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -6,7 +6,7 @@
     <title>@title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="@routes.Assets.at("stylesheets/base.css")" rel="stylesheet">
-<!--    <link href="@routes.Assets.at("stylesheets/top.css")" rel="stylesheet">-->
+<!--    <link href="@routes.Assets.at("stylesheets/index.css")" rel="stylesheet">-->
     @styles
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -41,7 +41,7 @@
                 <input type="search" class="search-query" placeholder="本のタイトルを検索する">
             </form>
         </ul>
-        <h3 class="muted"><a href="/">Social BookShelf</a></h3>
+        <h1 class="muted"><a href="/">Social BookShelf</a></h1>
     </div>
     <hr>
     @content
