--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,9 +1,9 @@
 @styles = {
-  <link href="@routes.Assets.at("stylesheets/top.css")" rel="stylesheet">
+  <link href="@routes.Assets.at("stylesheets/index.css")" rel="stylesheet">
 }
 
 @script = {
-  <script src="@routes.Assets.at("javascripts/top.js")"></script>
+  <script src="@routes.Assets.at("javascripts/index.js")"></script>
 }
 
 @layout("Social BookShelf")(styles)(script) {
@@ -11,7 +11,7 @@
     <h1>本棚をシェアしよう。</h1>
 
     <p class="lead">オフィスで、仲間内で。本の貸し借りを管理するアプリです。<br/>あなたの欲しい本は、誰かがすでに持っているかも。</p>
-    <a class="btn btn-large btn-success" href="#">本棚をつくる</a>
+    <a class="btn btn-large btn-success" href="book_shelf/register">本棚をつくる</a>
 </div>
 
 <hr>
