小見出しにアイコンを追加しました（コミット漏れ分追加） #32

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,7 +18,7 @@
 
 <div class="row-fluid bookshelfInfos">
     <div class="span6">
-        <h2>最近レンタルされた本</h2>
+        <h2>最近レンタルされた本<img src="@routes.Assets.at("images/book-15-48.png")" /></h2>
         <div class="rentalInfo">
             <img src="@routes.Assets.at("images/51f46ZHorvL._SS500_.jpg")" width="200" />
             <h4 class="book_title"><a href="#">JavaScript 第6版</a></h4>
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div class="span6">
-        <h2>最近更新された本棚</h2>
+        <h2>最近更新された本棚<img src="@routes.Assets.at("images/book-12-48.png")" /></h2>
         <div class="bookshelfInfo">
             <h4 class="name"></h4>
             <p class="description"></p>
