レンタル状況をモック表示からレンタル状況APIをコールするよう修正しました #32

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,38 +16,14 @@
 
 <hr>
 
-<div class="row-fluid bookshelfInfos">
+<div class="row-fluid updateInfos">
     <div class="span6">
         <h2>最近レンタルされた本<img src="@routes.Assets.at("images/book-15-48.png")" /></h2>
         <div class="rentalInfo">
-            <img src="@routes.Assets.at("images/51f46ZHorvL._SS500_.jpg")" width="200" />
-            <h4 class="book_title"><a href="#">JavaScript 第6版</a></h4>
-            <p class="rental_user">レンタルしたユーザ名</p>
-            <p class="update_date">2013/03/09 15:35</p>
-        </div>
-        <div class="rentalInfo">
-            <img src="@routes.Assets.at("images/517mEqwfBqL._SL500_AA300_.jpg")" width="200" />
-            <h4 class="book_title"><a href="#">JavaScript徹底攻略 (WEB+DB PRESS plus)</a></h4>
-            <p class="rental_user">レンタルしたユーザ名</p>
-            <p class="update_date">2013/03/09 10:34</p>
-        </div>
-        <div class="rentalInfo">
-            <img src="@routes.Assets.at("images/51rN-3XIrhL._SL500_AA300_.jpg")" width="200" />
-            <h4 class="book_title"><a href="#">入門 モダンJavaScript</a></h4>
-            <p class="rental_user">レンタルしたユーザ名</p>
-            <p class="update_date">2013/03/09 10:34</p>
-        </div>
-        <div class="rentalInfo">
-            <img src="@routes.Assets.at("images/51LVe-ASVdL._SL500_AA300_.jpg")" width="200" />
-            <h4 class="book_title"><a href="#">メンテナブルJavaScript ―読みやすく保守しやすいJavaScriptコードのための作法</a></h4>
-            <p class="rental_user">レンタルしたユーザ名</p>
-            <p class="update_date">2013/03/09 10:34</p>
-        </div>
-        <div class="rentalInfo">
-            <img src="@routes.Assets.at("images/51DE1p8lBL._SL500_AA300_.jpg")" width="200" />
-            <h4 class="book_title"><a href="#">Effective JavaScript JavaScriptを使うときに知っておきたい68の冴えたやり方</a></h4>
-            <p class="rental_user">レンタルしたユーザ名</p>
-            <p class="update_date">2013/03/09 10:34</p>
+            <img src="" class="book_image" />
+            <h4 class="book_title"></h4>
+            <p class="rental_user"></p>
+            <p class="update_date"></p>
         </div>
     </div>
     <div class="span6">
