--- a/app/views/showBookShelf.scala.html
+++ b/app/views/showBookShelf.scala.html
@@ -4,7 +4,7 @@
 @script = {
 }
 
-@layout("本棚をつくる - Social BookShelf")(styles)(script) {
+@layout("本棚詳細 - Social BookShelf")(styles)(script) {
     <ul class="breadcrumb">
         <li><a href="/">トップ</a> <span class="divider">/</span></li>
         <li class="active">本棚詳細</li>
