--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,8 +16,8 @@
 
 <hr>
 
-<div class="row-fluid updateInfos">
-    <div class="span6">
+<div class="row-fluid">
+    <div class="span6 updateRentalInfos">
         <h2>最近レンタルされた本<img src="@routes.Assets.at("images/book-15-48.png")" /></h2>
         <div class="rentalInfo">
             <img src="" class="book_image" />
@@ -26,7 +26,7 @@
             <p class="update_date"></p>
         </div>
     </div>
-    <div class="span6">
+    <div class="span6 updateBookShelfInfos">
         <h2>最近更新された本棚<img src="@routes.Assets.at("images/book-12-48.png")" /></h2>
         <div class="bookshelfInfo">
             <h4 class="name"></h4>
