--- a/app/views/showBookShelf.scala.html
+++ b/app/views/showBookShelf.scala.html
@@ -2,6 +2,7 @@
 }
 
 @script = {
+    <script src="@routes.Assets.at("javascripts/showBookShelf.js")"></script>
 }
 
 @layout("本棚詳細 - Social BookShelf")(styles)(script) {
@@ -10,4 +11,5 @@
         <li class="active">本棚詳細</li>
     </ul>
     <h2>本棚詳細</h2>
+    <button class="btn" id="registerBookButton" type="button"><i class="icon-book"></i> 書籍を登録する</button>
 }
