--- a/app/views/registerBook.scala.html
+++ b/app/views/registerBook.scala.html
@@ -12,38 +12,48 @@
     </ul>
     <h2>書籍を登録する</h2>
     <form id="registerBookForm" class="form-horizontal">
-        <button class="btn" id="registerBookButton" type="button" data-target="#myModal" autofocus><i class="icon-search"></i> Amazonで書籍を検索する</button>
         <div class="control-group">
             <label class="control-label" for="shelfName">書籍名<span class="required">*</span></label>
             <div class="controls">
-                <input type="text" id="shelfName" class="input-xlarge uneditable-input" name="shelf_name" required disabled maxlength="50" />
+                <input type="text" id="shelfName" class="input-xlarge" name="book_name" required maxlength="50" />
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="shelfName">著者名<span class="required">*</span></label>
             <div class="controls">
-                <input type="text" id="shelfName" class="input-xlarge uneditable-input" name="shelf_name" required disabled maxlength="50" />
+                <input type="text" id="shelfName" class="input-xlarge" name="book_author" required maxlength="50" />
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="shelfName">書籍の画像（大）</label>
+            <div class="controls">
+                <input type="text" id="shelfName" class="input-xlarge" name="large_image_url" maxlength="100" />
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="shelfName">書籍の画像（中）</label>
+            <div class="controls">
+                <input type="text" id="shelfName" class="input-xlarge" name="medium_image_url" maxlength="100" />
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="shelfName">書籍の画像（小）</label>
+            <div class="controls">
+                <input type="text" id="shelfName" class="input-xlarge" name="small_image_url" maxlength="100" />
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="shelfName">ISBN</label>
+            <div class="controls">
+                <input type="text" id="shelfName" class="input-xlarge" name="book_isbn" maxlength="50" />
             </div>
         </div>
 
         <div class="control-group">
             <div class="controls">
-              <button type="submit" id="makeShelfButton" class="btn">作成</button>
+              <button type="submit" id="makeBookButton" class="btn">作成</button>
             </div>
         </div>
     </form>
-    <!-- Modal -->
-    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Modal header</h3>
-      </div>
-      <div class="modal-body">
-        <p>One fine body…</p>
-      </div>
-      <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-        <button class="btn btn-primary">Save changes</button>
-      </div>
     </div>
 }
