書籍登録画面（#43）と書籍詳細画面（#40）作成中

--- a/app/views/registerBook.scala.html
+++ b/app/views/registerBook.scala.html
@@ -7,7 +7,7 @@
 
 @layout("書籍を登録する - Social BookShelf")(styles)(script) {
     <ul class="breadcrumb">
-        <li><a href="/">トップ</a> <span class="divider">/</span> <a href="/book_shelf/detail/">本棚詳細</a> <span class="divider">/</span> </li>
+        <li><a href="/">トップ</a> <span class="divider">/</span> <a href="/book_shelf/detail/" id="bookshelfAnchorLink">本棚詳細</a> <span class="divider">/</span> </li>
         <li class="active">書籍を登録する</li>
     </ul>
     <h2>書籍を登録する</h2>
