--- a/app/views/showBook.scala.html
+++ b/app/views/showBook.scala.html
@@ -17,6 +17,7 @@
             <h3 class="book_title"></h3>
             <p class="book_author"></p>
             <p class="update_date"></p>
+            <p class="published_date"></p>
         </div>
     </div>
 }
