共通ヘッダのログアウトボタン押下でログアウトAPIをコールするように修正しました closed #60

--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -34,7 +34,7 @@
                 data-height="short"
                 data-theme="dark">
               </span>
-                <button class="btn btn-small disabled" id="dissconectButton" type="button">log out</button>
+                <button class="btn btn-small disabled" id="logoutButton" type="button">log out</button>
             </div>
             <form class="navbar-search pull-right">
                 <input type="search" class="search-query" placeholder="本のタイトルを検索する">
