--- a/app/views/showBookShelf.scala.html
+++ b/app/views/showBookShelf.scala.html
@@ -10,6 +10,18 @@
         <li><a href="/">トップ</a> <span class="divider">/</span></li>
         <li class="active">本棚詳細</li>
     </ul>
-    <h2>本棚詳細</h2>
+    <div id="bookShelfInfoContents">
+        <div class="bookShelfInfo">
+            <h2 class="shelf_name"></h2>
+            <p class="shelf_description"></p>
+                <div class="bookInfo">
+                    <img src="" class="book_image" />
+                    <h3 class="book_title"></h3>
+                    <p class="book_author"></p>
+                    <p class="update_date"></p>
+                    <p class="published_date"></p>
+                </div>
+        </div>
+    </div>
     <button class="btn" id="registerBookButton" type="button"><i class="icon-book"></i> 書籍を登録する</button>
 }
