本棚詳細画面作成中…書籍一覧部分

--- a/app/views/showBookShelf.scala.html
+++ b/app/views/showBookShelf.scala.html
@@ -14,13 +14,13 @@
         <div class="bookShelfInfo">
             <h2 class="shelf_name"></h2>
             <p class="shelf_description"></p>
-                <div class="bookInfo">
+            <div class="test">
+                <div class="bookInfoArea">
                     <img src="" class="book_image" />
                     <h3 class="book_title"></h3>
                     <p class="book_author"></p>
-                    <p class="update_date"></p>
-                    <p class="published_date"></p>
                 </div>
+            </div>
         </div>
     </div>
     <button class="btn" id="registerBookButton" type="button"><i class="icon-book"></i> 書籍を登録する</button>
