本棚詳細画面 本のタイトルに書籍詳細画面へのリンクを付与

--- a/app/views/showBookShelf.scala.html
+++ b/app/views/showBookShelf.scala.html
@@ -14,7 +14,7 @@
         <div class="bookShelfInfo">
             <h2 class="shelf_name"></h2>
             <p class="shelf_description"></p>
-            <div class="test">
+            <div class="bookList">
                 <div class="bookInfoArea">
                     <img src="" class="book_image" />
                     <h3 class="book_title"></h3>
