書籍のレンタルと返却ができるようにしました #59

--- a/app/views/showBook.scala.html
+++ b/app/views/showBook.scala.html
@@ -19,6 +19,6 @@
             <p class="update_date"></p>
             <p class="published_date"></p>
         </div>
-        <button class="btn" href="#" id="rentalBookButton"><i class="icon-arrow-right"></i> この本を借りる</button>
+        <div id="rentalInfoArea"></div>
     </div>
 }
