--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -33,11 +33,12 @@
                 data-height="short"
                 data-theme="dark">
               </span>
-                <button class="btn btn-small disabled" id="logoutButton" type="button">log out</button>
+              <!-- <button class="btn btn-small disabled" id="logoutButton" type="button">log out</button> -->
             </div>
-            <form class="navbar-search pull-right">
+            <!-- <form class="navbar-search pull-right">
                 <input type="search" class="search-query" placeholder="本のタイトルを検索する">
             </form>
+            -->
         </ul>
         <h1 class="muted"><a href="/">Social BookShelf <img src="@routes.Assets.at("images/book-12-32.png")" /></a></h1>
     </div>
