#62 の変更を反映＆レイアウト調整しました

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,10 +20,9 @@
     <div class="span6 updateRentalInfos">
         <h2>最近レンタルされた本<img src="@routes.Assets.at("images/book-15-48.png")" /></h2>
         <div class="rentalInfo">
-            <img src="" class="book_image" />
             <h3 class="book_title"></h3>
-            <p class="rental_user"></p>
-            <p class="update_date"></p>
+            <div class="thumbnailBookImage"></div>
+            <div class="alert alert-info rentalUserInfo"></div>
         </div>
     </div>
     <div class="span6 updateBookShelfInfos">
