「最近レンタルされた本」のレイアウトを微調整しました

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,7 +22,7 @@
         <div class="rentalInfo">
             <h3 class="book_title"></h3>
             <div class="thumbnailBookImage"></div>
-            <div class="alert alert-info rentalUserInfo"></div>
+            <div class="rentalUserInfo"></div>
         </div>
     </div>
     <div class="span6 updateBookShelfInfos">
