--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -57,6 +57,11 @@ h1, h2, h3 {
     line-height: 1.5;
 }
 
-input[type=date] {
-    display: -webkit-inline-flex;
+#loginUserDisplayName {
+    display: inline-block;
+    height: 25px;
+}
+
+#loginUserDisplayName:focus {
+    background-color: #fcf8e3;
 }
