バーコード読み取りで書籍を検索できるようにしました #92 初期表示時に、キーワード検索入力欄にフォーカスが当たるようにしました #84

--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -43,6 +43,8 @@
         <h1 class="muted"><a href="/">Social BookShelf <img src="@routes.Assets.at("images/book-12-32.png")" /></a></h1>
     </div>
     <hr>
+    <div class="alert alert-error"></div>
+    <div class="alert alert-success"></div>
     @content
     <script src="@routes.Assets.at("javascripts/lib/require.js")"></script>
     <script src="@routes.Assets.at("javascripts/layout.js")"></script>
