写真のサイズのまま取り込むよう修正しました #95 とりいそぎ、layout.jsにcommon.jsの内容を移しました #86

--- a/app/views/registerBook.scala.html
+++ b/app/views/registerBook.scala.html
@@ -32,7 +32,7 @@
                     <button type="button" id="searchByBarcodeForSmartDevice" class="btn disabled"><i class="icon-search"></i> バーコード検索</button>
                 </div>
                 <div class="controls">
-                    <canvas id="previewPhotoForSmartDevice" class="previewPhoto" width="275" height="206"></canvas>
+                    <canvas id="previewPhotoForSmartDevice" class="previewPhoto"></canvas>
                 </div>
                 <legend>カメラで撮影（PC）</legend>
                 <div class="control-group">
