スマートフォンでバーコード検索を行う際に、撮影した画像を縮小してから検索するようにしました #97 書籍登録画面で、本の検索結果が表示されたら、検索結果にスクロールするようにしました #98

--- a/app/views/registerBook.scala.html
+++ b/app/views/registerBook.scala.html
@@ -32,7 +32,7 @@
                     <button type="button" id="searchByBarcodeForSmartDevice" class="btn disabled"><i class="icon-search"></i> バーコード検索</button>
                 </div>
                 <div class="controls">
-                    <canvas id="previewPhotoForSmartDevice" class="previewPhoto"></canvas>
+                    <canvas id="previewPhotoForSmartDevice" class="previewPhoto" width="200" height="200"></canvas>
                 </div>
                 <legend>カメラで撮影（PC）</legend>
                 <div class="control-group">
@@ -53,7 +53,7 @@
                 </div>
             </form>
         </div>
-        <div class="span6">
+        <div class="span6" id="searchResultArea">
             <h3>検索結果</h3>
             <script type="text/template" id="bookInfoTemplate">
                 <div class="bookInfo">
