--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -2,4 +2,5 @@
 
 @import url("bootstrap.css");
 @import url("bootstrap-responsive.css");
+@import url("chardinjs.css");
 @import url("common.css");
